<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="message"
            type="com.example.guessnumberfragment.data.Jugador" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ConfigFragment">

        <TextView
            android:id="@+id/tvJugador"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="100dp"
            android:text="@string/tvJugador"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etJugador"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:ems="10"
            android:hint="@string/etJugador"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvJugador"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvJugador" />

        <TextView
            android:id="@+id/tvNumIntentos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="170dp"
            android:text="@string/tvNumIntentos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etNumIntentos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:hint="@string/etNumIntentos"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvNumIntentos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvNumIntentos" />

        <Button
            android:id="@+id/btnJugar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="135dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="135dp"
            android:background="@color/purple_500"
            android:onClick="jugar"
            android:text="@string/btnJugar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNumIntentos" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>